platform/harbor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  hostnames:
  - harbor.bergtobias.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main
    namespace: traefik
    sectionName: websecure
  rules:
  - backendRefs:
    - name: harbor
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
